# my_first_project

./: LICENSE  README.md  dockerfile  navigationREADME.md  start_ros2_serial.sh  startjiantu.sh  visionREADME.md
src/filter/: CMakeLists.txt  package.xml
src/filter/src/: filter_node.cpp
src/rm_auto_aim/armor_detector/src/: armor_detector.cpp  armor_detector_node.cpp
src/rm_auto_aim/armor_detector/test/: test_detector.cpp
src/rm_behavior_tree/config/: a.xml  attack_left.xml  attack_right.xml  retreat_attack_left.xml  rmuc_01.xml
src/rm_behavior_tree/launch/: rm_behavior_tree.launch.py
src/rm_behavior_tree/plugins/action/: send_goal.cpp
src/rm_behavior_tree/src/: rm_behavior_tree.cpp
src/rm_bringup/: package.xml
src/rm_bringup/config/: camera_info.yaml  launch_params.yaml
src/rm_bringup/config/node_params/: armor_detector_params.yaml  (+4 more)
src/rm_bringup/launch/: bringup.launch.py
src/rm_decision_interfaces/: README.md
src/rm_hardware_driver/rm_vision_serial_driver/: CMakeLists.txt  README.md  package.xml
src/rm_interfaces/msg/: SerialReceiveData.msg
src/rm_nav_bringup/launch/: bringup_real.launch.py
src/rm_nav_bringup/urdf/: sentry_robot_real.xacro
src/rm_serial_driver/: CMakeLists.txt  README.md  package.xml
src/rm_serial_driver/config/: serial_driver.yaml
src/rm_serial_driver/src/: rm_serial_driver.cpp
src/ros2-hik-camera/: README.md
src/ros2-hik-camera/config/: camera_params.yaml
src/ros2-hik-camera/src/: hik_camera_node.cpp
src/serial_bridge/: package.xml  setup.py
src/serial_bridge/serial_bridge/: serial_bridge.py
(+29 files in other folders)
